<resources>
    <string name="app_name">iOu Debt Calculator</string>
    <string name="action_settings">Settings</string>

    <string name="new_transaction_borrow_withdraw">Borrow / Withdraw</string>
    <string name="new_transaction_loan_deposit">Loan / Deposit</string>
    <string name="new_transaction_account">Account</string>
    <string name="new_transaction_amount">Amount</string>
    <string name="new_transaction_currency">Currency</string>
    <string name="new_transaction_recurring_transaction">Recurring Transaction</string>
    <string name="new_transaction_frequency">Frequency</string>
    <string name="new_transaction_start_date">Start Date</string>
    <string name="new_transaction_save_transaction">Save Transaction</string>
    <string name="new_transaction_description_hint">Description / Note</string>
    <string name="new_transaction_retry">Retry</string>

    <string name="new_account_account_name_hint">Enter Account Name</string>
    <string name="new_account_button_content_description">Click to Create a New Account</string>
    <string name="new_account_due_date">Due Date</string>

    <string name="error_borrow_or_loan">Must choose Borrow or Loan</string>
    <string name="error_must_enter_amount">Must enter an amount</string>
    <string name="error_must_enter_account_name">Must enter an Account Name</string>
    <string name="error_must_choose_account">Must choose an Account</string>
    <string name="error_conversion">Conversion Error</string>

    <string-array name="available_currencies">
        <item>AUD</item>
        <item>BGN</item>
        <item>BRL</item>
        <item>CAD</item>
        <item>CHF</item>
        <item>CNY</item>
        <item>CZK</item>
        <item>DKK</item>
        <item>GBP</item>
        <item>HKD</item>
        <item>HRK</item>
        <item>HUF</item>
        <item>IDR</item>
        <item>ILS</item>
        <item>INR</item>
        <item>JPY</item>
        <item>KRW</item>
        <item>MXN</item>
        <item>MYR</item>
        <item>NOK</item>
        <item>NZD</item>
        <item>PHP</item>
        <item>PLN</item>
        <item>RON</item>
        <item>RUB</item>
        <item>SEK</item>
        <item>SGD</item>
        <item>THB</item>
        <item>TRY</item>
        <item>USD</item>
        <item>ZAR</item>
    </string-array>

</resources>
